Fixed total song time bug

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -182,17 +182,14 @@
       </main>
     </section>
     <footer class="music-controls">
-      <audio
-        src="../assets/songs/blink-182 - All The Small Things.mp3"
-        preload="metadata"
-      ></audio>
+      <audio preload="metadata"></audio>
       <div class="song-details-container">
         <div class="song-img">
           <img src="../assets/img/Home.png" alt="Home Icon" />
         </div>
         <div class="song-details">
-          <p class="song-name">Song Name</p>
-          <p class="song-artist">Song Artist</p>
+          <p id="song-name"></p>
+          <p id="song-artist"></p>
         </div>
       </div>
       <div class="song-player">
